docs: Improve disclaimer.

--- a/pork.1
+++ b/pork.1
@@ -20,7 +20,7 @@ If the current user is not in the configuration file / is not allowed to run a c
 
 Otherwise, \fBpork\fR exits with the exit status of the program that was executed.
 
-.SH EXAMPLE
+.SH EXAMPLES
 Powering off your computer.
 .br
 $ pork poweroff
